syntax = "proto3";
package cores;

option go_package = "github.com/snple/beacon/pb/cores;cores";

import "generic_message.proto";

message SyncUpdated {
    string id = 1;
    int64 updated = 2;
}

service SyncService {
    rpc SetNodeUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetNodeUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitNodeUpdated(pb.Id) returns (stream pb.MyBool) {}

    rpc SetPinValueUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinValueUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitPinValueUpdated(pb.Id) returns (stream pb.MyBool) {}

    rpc SetPinWriteUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinWriteUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitPinWriteUpdated(pb.Id) returns (stream pb.MyBool) {}
}

message SyncGlobalUpdated {
    string name = 1;
    int64 updated = 2;
}

service SyncGlobalService {
    rpc SetUpdated(SyncGlobalUpdated) returns (pb.MyBool) {}
    rpc GetUpdated(pb.Name) returns (SyncGlobalUpdated) {}
    rpc WaitUpdated(pb.Name) returns (stream pb.MyBool) {}
}
